--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>github repo</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./app.js">
 </head>
 <body>
     <h1>maryam1382sanaee.ir</h1>
